# spread-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: make_icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddCoinDialog.tsx  AuthorBadge.tsx  Charts.tsx  CoinDetail.tsx  Kpi.tsx  Sidebar.tsx
src/components/ui/: Select.tsx
src/hooks/: useAnimatedNumber.ts
src/lib/: engine.ts  format.ts  store.ts  themes.ts  types.ts  venues.ts
